--- a/CFSockets.xcodeproj/xcshareddata/xcschemes/CFSocketsLib.xcscheme
+++ b/CFSockets.xcodeproj/xcshareddata/xcschemes/CFSocketsLib.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0450"
+   LastUpgradeVersion = "0610"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -63,6 +63,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "78D3213915905D570039E12B"
+            BuildableName = "libCFSockets.a"
+            BlueprintName = "CFSocketsLib"
+            ReferencedContainer = "container:CFSockets.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
